CAY-2407 Modeler: add prefetch support for the SQLTemplate query
CAY-2410 Add prefetch type support for SQLTemplate query and SelectQuery
CAY-2414 Modeler: new icon design
CAY-2415 Transaction isolation and propagation support
CAY-2416 Change TreeMap for HashMap to store data in Cayenne model classes
CAY-2422 Modeler: Open driver setup window on driver load error

Bug Fixes:

CAY-2282 Various Update Issues With Vertical Inheritance
CAY-2370 ValueObjectType for byte[] fails lookup
CAY-2380 ReferenceMap should not store or return null values
CAY-2381 cgen: meaningful PK with boxed type ends up with primitive type in generated source
CAY-2382 Lack of synchronization in DataContext serialization
CAY-2387 Can't select byte[] property with ColumnSelect
CAY-2388 Modeler: Visualization issues with undo/redo actions for attributes and relationships
CAY-2389 DbEntity qualifier with DbPath expression translates into wrong SQL
CAY-2392 Modeler: Unable to remove DataNode
CAY-2397 Modeler: Unable to set enum:value as Entity qualifier
CAY-2401 Modeler: NPE in ObjEntity sync action
CAY-2405 Broken prefetch of entity with inheritance and attribute with custom java type
CAY-2408 Cayenne JDK 10 compatibility
CAY-2411 Wrong resolution of ExtendedType with ValueObjectType for inherited class
CAY-2418 Modeler: unable to edit entity selected via Search
CAY-2419 Modeler: Not changing highlight on selecting search results within one entity
CAY-2420 Modeler: search is not performed for Stored Procedures
CAY-2425 Modeler: Migrate DB Direction field is locked if no option was selected in dropdown list
CAY-2427 Modeler: Undo throws exception
CAY-2429 Generate classes: Invalid template type: EMBEDDABLE_SINGLE_CLASS
CAY-2430 Modeler: Redo throws NPE
CAY-2435 cdbimport: procedure parameters are not imported
CAY-2436 NPE in CayenneRuntimeException constructor

----------------------------------
Release: 4.1.M1
Date: October 14, 2017
----------------------------------
Changes/New Features:
