@@ -27,6 +27,20 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|map
+operator|.
+name|DbEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|util
 operator|.
 name|EqualsBuilder
@@ -78,6 +92,16 @@ operator|.
 name|sql
 operator|.
 name|SQLException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
 import|;
 end_import
 
@@ -939,6 +963,70 @@ argument_list|)
 operator|.
 name|toHashCode
 argument_list|()
+return|;
+block|}
+comment|/**          * Validate that entity is for this key (exists and has same catalog/schema)          * @param entity to validate          * @return is entity matches for this key          */
+specifier|public
+name|boolean
+name|validateEntity
+parameter_list|(
+name|DbEntity
+name|entity
+parameter_list|)
+block|{
+if|if
+condition|(
+name|entity
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+operator|!
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|catalog
+argument_list|,
+name|entity
+operator|.
+name|getCatalog
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+operator|!
+name|Objects
+operator|.
+name|equals
+argument_list|(
+name|schema
+argument_list|,
+name|entity
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+return|return
+literal|true
 return|;
 block|}
 block|}
