@@ -420,166 +420,6 @@ name|IllegalStateException
 argument_list|()
 throw|;
 block|}
-if|if
-condition|(
-operator|!
-operator|new
-name|EqualsBuilder
-argument_list|()
-operator|.
-name|append
-argument_list|(
-name|pkEntity
-operator|.
-name|getCatalog
-argument_list|()
-argument_list|,
-name|PK
-operator|.
-name|getCatalog
-argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|pkEntity
-operator|.
-name|getSchema
-argument_list|()
-argument_list|,
-name|PK
-operator|.
-name|getSchema
-argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|fkEntity
-operator|.
-name|getCatalog
-argument_list|()
-argument_list|,
-name|FK
-operator|.
-name|getCatalog
-argument_list|()
-argument_list|)
-operator|.
-name|append
-argument_list|(
-name|fkEntity
-operator|.
-name|getSchema
-argument_list|()
-argument_list|,
-name|PK
-operator|.
-name|getSchema
-argument_list|()
-argument_list|)
-operator|.
-name|isEquals
-argument_list|()
-condition|)
-block|{
-name|LOGGER
-operator|.
-name|info
-argument_list|(
-literal|"Skip relation: '"
-operator|+
-name|key
-operator|+
-literal|"' because it related to objects from other catalog/schema"
-argument_list|)
-expr_stmt|;
-name|LOGGER
-operator|.
-name|info
-argument_list|(
-literal|"     relation primary key: '"
-operator|+
-name|PK
-operator|.
-name|getCatalog
-argument_list|()
-operator|+
-literal|"."
-operator|+
-name|PK
-operator|.
-name|getSchema
-argument_list|()
-operator|+
-literal|"'"
-argument_list|)
-expr_stmt|;
-name|LOGGER
-operator|.
-name|info
-argument_list|(
-literal|"       primary key entity: '"
-operator|+
-name|pkEntity
-operator|.
-name|getCatalog
-argument_list|()
-operator|+
-literal|"."
-operator|+
-name|pkEntity
-operator|.
-name|getSchema
-argument_list|()
-operator|+
-literal|"'"
-argument_list|)
-expr_stmt|;
-name|LOGGER
-operator|.
-name|info
-argument_list|(
-literal|"     relation foreign key: '"
-operator|+
-name|FK
-operator|.
-name|getCatalog
-argument_list|()
-operator|+
-literal|"."
-operator|+
-name|FK
-operator|.
-name|getSchema
-argument_list|()
-operator|+
-literal|"'"
-argument_list|)
-expr_stmt|;
-name|LOGGER
-operator|.
-name|info
-argument_list|(
-literal|"       foreign key entity: '"
-operator|+
-name|fkEntity
-operator|.
-name|getCatalog
-argument_list|()
-operator|+
-literal|"."
-operator|+
-name|fkEntity
-operator|.
-name|getSchema
-argument_list|()
-operator|+
-literal|"'"
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
 comment|// forwardRelationship is a reference from table with primary key
 comment|// it is what exactly we load from db
 name|DbRelationship
@@ -773,7 +613,7 @@ name|relationship
 parameter_list|)
 block|{
 name|TableFilter
-name|tableFilter
+name|sourceTableFilter
 init|=
 name|config
 operator|.
@@ -782,12 +622,45 @@ argument_list|()
 operator|.
 name|tableFilter
 argument_list|(
-name|entity
+name|relationship
+operator|.
+name|getSourceEntity
+argument_list|()
 operator|.
 name|getCatalog
 argument_list|()
 argument_list|,
-name|entity
+name|relationship
+operator|.
+name|getSourceEntity
+argument_list|()
+operator|.
+name|getSchema
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|TableFilter
+name|targetTableFilter
+init|=
+name|config
+operator|.
+name|getFiltersConfig
+argument_list|()
+operator|.
+name|tableFilter
+argument_list|(
+name|relationship
+operator|.
+name|getTargetEntity
+argument_list|()
+operator|.
+name|getCatalog
+argument_list|()
+argument_list|,
+name|relationship
+operator|.
+name|getTargetEntity
+argument_list|()
 operator|.
 name|getSchema
 argument_list|()
@@ -797,7 +670,7 @@ comment|// check that relationship can be included
 if|if
 condition|(
 operator|!
-name|tableFilter
+name|sourceTableFilter
 operator|.
 name|getIncludeTableRelationshipFilter
 argument_list|(
@@ -848,7 +721,7 @@ block|{
 if|if
 condition|(
 operator|!
-name|tableFilter
+name|sourceTableFilter
 operator|.
 name|getIncludeTableColumnFilter
 argument_list|(
@@ -867,7 +740,7 @@ argument_list|()
 argument_list|)
 operator|||
 operator|!
-name|tableFilter
+name|targetTableFilter
 operator|.
 name|getIncludeTableColumnFilter
 argument_list|(
