@@ -157,6 +157,22 @@ literal|"PAINTING"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|String
+name|catalog
+init|=
+name|connection
+operator|.
+name|getCatalog
+argument_list|()
+decl_stmt|;
+name|String
+name|schema
+init|=
+name|connection
+operator|.
+name|getSchema
+argument_list|()
+decl_stmt|;
 name|DbEntity
 name|artist
 init|=
@@ -165,6 +181,20 @@ argument_list|(
 literal|"ARTIST"
 argument_list|)
 decl_stmt|;
+name|artist
+operator|.
+name|setCatalog
+argument_list|(
+name|catalog
+argument_list|)
+expr_stmt|;
+name|artist
+operator|.
+name|setSchema
+argument_list|(
+name|schema
+argument_list|)
+expr_stmt|;
 name|DbAttribute
 name|artistId
 init|=
@@ -189,6 +219,20 @@ argument_list|(
 literal|"GALLERY"
 argument_list|)
 decl_stmt|;
+name|gallery
+operator|.
+name|setCatalog
+argument_list|(
+name|catalog
+argument_list|)
+expr_stmt|;
+name|gallery
+operator|.
+name|setSchema
+argument_list|(
+name|schema
+argument_list|)
+expr_stmt|;
 name|DbAttribute
 name|galleryId
 init|=
@@ -213,6 +257,20 @@ argument_list|(
 literal|"PAINTING"
 argument_list|)
 decl_stmt|;
+name|painting
+operator|.
+name|setCatalog
+argument_list|(
+name|catalog
+argument_list|)
+expr_stmt|;
+name|painting
+operator|.
+name|setSchema
+argument_list|(
+name|schema
+argument_list|)
+expr_stmt|;
 name|DbAttribute
 name|paintingId
 init|=
